Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -10,17 +10,17 @@
   "repository": "ecomplus-stores/originalinformatica",
   "logo": "/img/uploads/logooriginalbranco.png",
   "name": "originalinformatica",
-  "short_name": "originalinformatica",
+  "short_name": "Original Informática",
   "lang": "pt_br",
   "currency": "BRL",
   "mini_logo": "",
   "font_family": "_",
   "favicon": "/img/uploads/favicon.png",
-  "icons_font": "_",
+  "icons_font": "font-awesome",
   "country_code": "BR",
   "secondary_color": "#393e46",
   "icon": "/img/icon.png",
   "store_id": 51418,
-  "description": "originalinformatica",
+  "description": "Original Informática",
   "large_icon": "/img/large-icon.png"
 }
