--- a/content/settings.json
+++ b/content/settings.json
@@ -3,7 +3,7 @@
   "currency_symbol": "R$",
   "primary_color": "#222831",
   "theme": {
-    "bootswatch": "_",
+    "bootswatch": "flatly",
     "custom": "_"
   },
   "bg_color": "#ffffff",
@@ -16,9 +16,9 @@
   "mini_logo": "",
   "font_family": "_",
   "favicon": "/img/uploads/favicon.png",
-  "icons_font": "font-awesome",
+  "icons_font": "_",
   "country_code": "BR",
-  "secondary_color": "#393e46",
+  "secondary_color": "#ff6655",
   "icon": "/img/icon.png",
   "store_id": 51418,
   "description": "Original Informática",
