Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -9,7 +9,7 @@
   "bg_color": "#ffffff",
   "repository": "ecomplus-stores/originalinformatica",
   "logo": "/img/uploads/logooriginalbranco.png",
-  "name": "originalinformatica",
+  "name": "Original Informática",
   "short_name": "Original Informática",
   "lang": "pt_br",
   "currency": "BRL",
