Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -6,7 +6,7 @@
     "bootswatch": "flatly",
     "custom": "_"
   },
-  "bg_color": "#ffffff",
+  "bg_color": "#0008d9",
   "repository": "ecomplus-stores/originalinformatica",
   "logo": "/img/uploads/logooriginalbranco.png",
   "name": "Original Informática",
