--- a/content/settings.json
+++ b/content/settings.json
@@ -1,7 +1,7 @@
 {
   "domain": "originalinformatica.netlify.app",
   "currency_symbol": "R$",
-  "primary_color": "#010812",
+  "primary_color": "#ff6500",
   "theme": {
     "bootswatch": "flatly",
     "custom": "_"
@@ -18,7 +18,7 @@
   "favicon": "/img/uploads/favicon.png",
   "icons_font": "_",
   "country_code": "BR",
-  "secondary_color": "#ff6500",
+  "secondary_color": "#0046b4",
   "icon": "/img/icon.png",
   "store_id": 51418,
   "description": "Original Informática",
